Removed bug of whitespaces between home panels on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -435,7 +435,6 @@ html {
     flex-direction: row-reverse;
   }
   .intro__pattern {
-    position: absolute;
     height: 152.3vh;
     right: 0;
   }
